# pico-core

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  init.cmake
cmake/: FindPicotool.cmake  pico_add_flash_target.cmake
cmake/picotool/: CMakeLists.txt  vcpkg.json
src/boot_stage3/: CMakeLists.txt  boot3.c  memmap.ld  test.py
